Etapa 2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ERROR
    TkElse

Grammar

Rule 0     S' -> program
Rule 1     program -> TkOBlock declarations TkSemicolon instructions TkCBlock
Rule 2     declarations -> declarations TkSemicolon declaration
Rule 3     declarations -> declaration
Rule 4     declaration -> TkInt idlist
Rule 5     declaration -> TkBool idlist
Rule 6     declaration -> TkFunction TkOBracket TkSoForth TkNum TkCBracket idlist
Rule 7     idlist -> idlist TkComma TkId
Rule 8     idlist -> TkId
Rule 9     instructions -> instructions TkSemicolon instruction
Rule 10    instructions -> instruction
Rule 11    instruction -> assignment
Rule 12    instruction -> while
Rule 13    instruction -> if
Rule 14    instruction -> print
Rule 15    instruction -> skip
Rule 16    assignment -> TkId TkAsig expression
Rule 17    print -> TkPrint expression
Rule 18    skip -> TkSkip
Rule 19    while -> TkWhile expression TkArrow instructions TkEnd
Rule 20    if -> TkIf guardlist TkFi
Rule 21    guardlist -> guard
Rule 22    guardlist -> guard TkGuard guardlist
Rule 23    guard -> expression TkArrow instructions
Rule 24    expression -> expression TkPlus expression
Rule 25    expression -> expression TkMinus expression
Rule 26    expression -> expression TkMult expression
Rule 27    expression -> expression TkAnd expression
Rule 28    expression -> expression TkOr expression
Rule 29    expression -> expression TkLeq expression
Rule 30    expression -> expression TkGeq expression
Rule 31    expression -> expression TkLess expression
Rule 32    expression -> expression TkGreater expression
Rule 33    expression -> expression TkEqual expression
Rule 34    expression -> expression TkNEqual expression
Rule 35    expression -> expression TkComma expression
Rule 36    expression -> expression TkApp TkId
Rule 37    expression -> expression TkApp TkNum
Rule 38    expression -> TkNot expression
Rule 39    expression -> TkMinus expression
Rule 40    expression -> TkOpenPar expression TkClosePar
Rule 41    expression -> TkNum
Rule 42    expression -> TkTrue
Rule 43    expression -> TkFalse
Rule 44    expression -> TkString
Rule 45    expression -> TkId
Rule 46    expression -> app
Rule 47    app -> TkId accesslist
Rule 48    accesslist -> access accesslist
Rule 49    accesslist -> empty
Rule 50    access -> TkOpenPar index TkClosePar
Rule 51    index -> TkNum TkTwoPoints expression
Rule 52    empty -> <empty>

Terminals, with rules where they appear

ERROR                : 
TkAnd                : 27
TkApp                : 36 37
TkArrow              : 19 23
TkAsig               : 16
TkBool               : 5
TkCBlock             : 1
TkCBracket           : 6
TkClosePar           : 40 50
TkComma              : 7 35
TkElse               : 
TkEnd                : 19
TkEqual              : 33
TkFalse              : 43
TkFi                 : 20
TkFunction           : 6
TkGeq                : 30
TkGreater            : 32
TkGuard              : 22
TkId                 : 7 8 16 36 45 47
TkIf                 : 20
TkInt                : 4
TkLeq                : 29
TkLess               : 31
TkMinus              : 25 39
TkMult               : 26
TkNEqual             : 34
TkNot                : 38
TkNum                : 6 37 41 51
TkOBlock             : 1
TkOBracket           : 6
TkOpenPar            : 40 50
TkOr                 : 28
TkPlus               : 24
TkPrint              : 17
TkSemicolon          : 1 2 9
TkSkip               : 18
TkSoForth            : 6
TkString             : 44
TkTrue               : 42
TkTwoPoints          : 51
TkWhile              : 19
error                : 

Nonterminals, with rules where they appear

access               : 48
accesslist           : 47 48
app                  : 46
assignment           : 11
declaration          : 2 3
declarations         : 1 2
empty                : 49
expression           : 16 17 19 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 37 38 39 40 51
guard                : 21 22
guardlist            : 20 22
idlist               : 4 5 6 7
if                   : 13
index                : 50
instruction          : 9 10
instructions         : 1 9 19 23
print                : 14
program              : 0
skip                 : 15
while                : 12

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . TkOBlock declarations TkSemicolon instructions TkCBlock

    TkOBlock        shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> TkOBlock . declarations TkSemicolon instructions TkCBlock
    (2) declarations -> . declarations TkSemicolon declaration
    (3) declarations -> . declaration
    (4) declaration -> . TkInt idlist
    (5) declaration -> . TkBool idlist
    (6) declaration -> . TkFunction TkOBracket TkSoForth TkNum TkCBracket idlist

    TkInt           shift and go to state 5
    TkBool          shift and go to state 6
    TkFunction      shift and go to state 7

    declarations                   shift and go to state 3
    declaration                    shift and go to state 4

state 3

    (1) program -> TkOBlock declarations . TkSemicolon instructions TkCBlock
    (2) declarations -> declarations . TkSemicolon declaration

    TkSemicolon     shift and go to state 8


state 4

    (3) declarations -> declaration .

    TkSemicolon     reduce using rule 3 (declarations -> declaration .)


state 5

    (4) declaration -> TkInt . idlist
    (7) idlist -> . idlist TkComma TkId
    (8) idlist -> . TkId

    TkId            shift and go to state 10

    idlist                         shift and go to state 9

state 6

    (5) declaration -> TkBool . idlist
    (7) idlist -> . idlist TkComma TkId
    (8) idlist -> . TkId

    TkId            shift and go to state 10

    idlist                         shift and go to state 11

state 7

    (6) declaration -> TkFunction . TkOBracket TkSoForth TkNum TkCBracket idlist

    TkOBracket      shift and go to state 12


state 8

    (1) program -> TkOBlock declarations TkSemicolon . instructions TkCBlock
    (2) declarations -> declarations TkSemicolon . declaration
    (9) instructions -> . instructions TkSemicolon instruction
    (10) instructions -> . instruction
    (4) declaration -> . TkInt idlist
    (5) declaration -> . TkBool idlist
    (6) declaration -> . TkFunction TkOBracket TkSoForth TkNum TkCBracket idlist
    (11) instruction -> . assignment
    (12) instruction -> . while
    (13) instruction -> . if
    (14) instruction -> . print
    (15) instruction -> . skip
    (16) assignment -> . TkId TkAsig expression
    (19) while -> . TkWhile expression TkArrow instructions TkEnd
    (20) if -> . TkIf guardlist TkFi
    (17) print -> . TkPrint expression
    (18) skip -> . TkSkip

    TkInt           shift and go to state 5
    TkBool          shift and go to state 6
    TkFunction      shift and go to state 7
    TkId            shift and go to state 21
    TkWhile         shift and go to state 22
    TkIf            shift and go to state 23
    TkPrint         shift and go to state 24
    TkSkip          shift and go to state 25

    instructions                   shift and go to state 13
    declaration                    shift and go to state 14
    instruction                    shift and go to state 15
    assignment                     shift and go to state 16
    while                          shift and go to state 17
    if                             shift and go to state 18
    print                          shift and go to state 19
    skip                           shift and go to state 20

state 9

    (4) declaration -> TkInt idlist .
    (7) idlist -> idlist . TkComma TkId

    TkSemicolon     reduce using rule 4 (declaration -> TkInt idlist .)
    TkComma         shift and go to state 26


state 10

    (8) idlist -> TkId .

    TkComma         reduce using rule 8 (idlist -> TkId .)
    TkSemicolon     reduce using rule 8 (idlist -> TkId .)


state 11

    (5) declaration -> TkBool idlist .
    (7) idlist -> idlist . TkComma TkId

    TkSemicolon     reduce using rule 5 (declaration -> TkBool idlist .)
    TkComma         shift and go to state 26


state 12

    (6) declaration -> TkFunction TkOBracket . TkSoForth TkNum TkCBracket idlist

    TkSoForth       shift and go to state 27


state 13

    (1) program -> TkOBlock declarations TkSemicolon instructions . TkCBlock
    (9) instructions -> instructions . TkSemicolon instruction

    TkCBlock        shift and go to state 29
    TkSemicolon     shift and go to state 28


state 14

    (2) declarations -> declarations TkSemicolon declaration .

    TkSemicolon     reduce using rule 2 (declarations -> declarations TkSemicolon declaration .)


state 15

    (10) instructions -> instruction .

    TkCBlock        reduce using rule 10 (instructions -> instruction .)
    TkSemicolon     reduce using rule 10 (instructions -> instruction .)
    TkEnd           reduce using rule 10 (instructions -> instruction .)
    TkGuard         reduce using rule 10 (instructions -> instruction .)
    TkFi            reduce using rule 10 (instructions -> instruction .)


state 16

    (11) instruction -> assignment .

    TkCBlock        reduce using rule 11 (instruction -> assignment .)
    TkSemicolon     reduce using rule 11 (instruction -> assignment .)
    TkEnd           reduce using rule 11 (instruction -> assignment .)
    TkGuard         reduce using rule 11 (instruction -> assignment .)
    TkFi            reduce using rule 11 (instruction -> assignment .)


state 17

    (12) instruction -> while .

    TkCBlock        reduce using rule 12 (instruction -> while .)
    TkSemicolon     reduce using rule 12 (instruction -> while .)
    TkEnd           reduce using rule 12 (instruction -> while .)
    TkGuard         reduce using rule 12 (instruction -> while .)
    TkFi            reduce using rule 12 (instruction -> while .)


state 18

    (13) instruction -> if .

    TkCBlock        reduce using rule 13 (instruction -> if .)
    TkSemicolon     reduce using rule 13 (instruction -> if .)
    TkEnd           reduce using rule 13 (instruction -> if .)
    TkGuard         reduce using rule 13 (instruction -> if .)
    TkFi            reduce using rule 13 (instruction -> if .)


state 19

    (14) instruction -> print .

    TkCBlock        reduce using rule 14 (instruction -> print .)
    TkSemicolon     reduce using rule 14 (instruction -> print .)
    TkEnd           reduce using rule 14 (instruction -> print .)
    TkGuard         reduce using rule 14 (instruction -> print .)
    TkFi            reduce using rule 14 (instruction -> print .)


state 20

    (15) instruction -> skip .

    TkCBlock        reduce using rule 15 (instruction -> skip .)
    TkSemicolon     reduce using rule 15 (instruction -> skip .)
    TkEnd           reduce using rule 15 (instruction -> skip .)
    TkGuard         reduce using rule 15 (instruction -> skip .)
    TkFi            reduce using rule 15 (instruction -> skip .)


state 21

    (16) assignment -> TkId . TkAsig expression

    TkAsig          shift and go to state 30


state 22

    (19) while -> TkWhile . expression TkArrow instructions TkEnd
    (24) expression -> . expression TkPlus expression
    (25) expression -> . expression TkMinus expression
    (26) expression -> . expression TkMult expression
    (27) expression -> . expression TkAnd expression
    (28) expression -> . expression TkOr expression
    (29) expression -> . expression TkLeq expression
    (30) expression -> . expression TkGeq expression
    (31) expression -> . expression TkLess expression
    (32) expression -> . expression TkGreater expression
    (33) expression -> . expression TkEqual expression
    (34) expression -> . expression TkNEqual expression
    (35) expression -> . expression TkComma expression
    (36) expression -> . expression TkApp TkId
    (37) expression -> . expression TkApp TkNum
    (38) expression -> . TkNot expression
    (39) expression -> . TkMinus expression
    (40) expression -> . TkOpenPar expression TkClosePar
    (41) expression -> . TkNum
    (42) expression -> . TkTrue
    (43) expression -> . TkFalse
    (44) expression -> . TkString
    (45) expression -> . TkId
    (46) expression -> . app
    (47) app -> . TkId accesslist

    TkNot           shift and go to state 35
    TkMinus         shift and go to state 32
    TkOpenPar       shift and go to state 36
    TkNum           shift and go to state 34
    TkTrue          shift and go to state 37
    TkFalse         shift and go to state 38
    TkString        shift and go to state 39
    TkId            shift and go to state 33

    expression                     shift and go to state 31
    app                            shift and go to state 40

state 23

    (20) if -> TkIf . guardlist TkFi
    (21) guardlist -> . guard
    (22) guardlist -> . guard TkGuard guardlist
    (23) guard -> . expression TkArrow instructions
    (24) expression -> . expression TkPlus expression
    (25) expression -> . expression TkMinus expression
    (26) expression -> . expression TkMult expression
    (27) expression -> . expression TkAnd expression
    (28) expression -> . expression TkOr expression
    (29) expression -> . expression TkLeq expression
    (30) expression -> . expression TkGeq expression
    (31) expression -> . expression TkLess expression
    (32) expression -> . expression TkGreater expression
    (33) expression -> . expression TkEqual expression
    (34) expression -> . expression TkNEqual expression
    (35) expression -> . expression TkComma expression
    (36) expression -> . expression TkApp TkId
    (37) expression -> . expression TkApp TkNum
    (38) expression -> . TkNot expression
    (39) expression -> . TkMinus expression
    (40) expression -> . TkOpenPar expression TkClosePar
    (41) expression -> . TkNum
    (42) expression -> . TkTrue
    (43) expression -> . TkFalse
    (44) expression -> . TkString
    (45) expression -> . TkId
    (46) expression -> . app
    (47) app -> . TkId accesslist

    TkNot           shift and go to state 35
    TkMinus         shift and go to state 32
    TkOpenPar       shift and go to state 36
    TkNum           shift and go to state 34
    TkTrue          shift and go to state 37
    TkFalse         shift and go to state 38
    TkString        shift and go to state 39
    TkId            shift and go to state 33

    guardlist                      shift and go to state 41
    guard                          shift and go to state 42
    expression                     shift and go to state 43
    app                            shift and go to state 40

state 24

    (17) print -> TkPrint . expression
    (24) expression -> . expression TkPlus expression
    (25) expression -> . expression TkMinus expression
    (26) expression -> . expression TkMult expression
    (27) expression -> . expression TkAnd expression
    (28) expression -> . expression TkOr expression
    (29) expression -> . expression TkLeq expression
    (30) expression -> . expression TkGeq expression
    (31) expression -> . expression TkLess expression
    (32) expression -> . expression TkGreater expression
    (33) expression -> . expression TkEqual expression
    (34) expression -> . expression TkNEqual expression
    (35) expression -> . expression TkComma expression
    (36) expression -> . expression TkApp TkId
    (37) expression -> . expression TkApp TkNum
    (38) expression -> . TkNot expression
    (39) expression -> . TkMinus expression
    (40) expression -> . TkOpenPar expression TkClosePar
    (41) expression -> . TkNum
    (42) expression -> . TkTrue
    (43) expression -> . TkFalse
    (44) expression -> . TkString
    (45) expression -> . TkId
    (46) expression -> . app
    (47) app -> . TkId accesslist

    TkNot           shift and go to state 35
    TkMinus         shift and go to state 32
    TkOpenPar       shift and go to state 36
    TkNum           shift and go to state 34
    TkTrue          shift and go to state 37
    TkFalse         shift and go to state 38
    TkString        shift and go to state 39
    TkId            shift and go to state 33

    expression                     shift and go to state 44
    app                            shift and go to state 40

state 25

    (18) skip -> TkSkip .

    TkCBlock        reduce using rule 18 (skip -> TkSkip .)
    TkSemicolon     reduce using rule 18 (skip -> TkSkip .)
    TkEnd           reduce using rule 18 (skip -> TkSkip .)
    TkGuard         reduce using rule 18 (skip -> TkSkip .)
    TkFi            reduce using rule 18 (skip -> TkSkip .)


state 26

    (7) idlist -> idlist TkComma . TkId

    TkId            shift and go to state 45


state 27

    (6) declaration -> TkFunction TkOBracket TkSoForth . TkNum TkCBracket idlist

    TkNum           shift and go to state 46


state 28

    (9) instructions -> instructions TkSemicolon . instruction
    (11) instruction -> . assignment
    (12) instruction -> . while
    (13) instruction -> . if
    (14) instruction -> . print
    (15) instruction -> . skip
    (16) assignment -> . TkId TkAsig expression
    (19) while -> . TkWhile expression TkArrow instructions TkEnd
    (20) if -> . TkIf guardlist TkFi
    (17) print -> . TkPrint expression
    (18) skip -> . TkSkip

    TkId            shift and go to state 21
    TkWhile         shift and go to state 22
    TkIf            shift and go to state 23
    TkPrint         shift and go to state 24
    TkSkip          shift and go to state 25

    instruction                    shift and go to state 47
    assignment                     shift and go to state 16
    while                          shift and go to state 17
    if                             shift and go to state 18
    print                          shift and go to state 19
    skip                           shift and go to state 20

state 29

    (1) program -> TkOBlock declarations TkSemicolon instructions TkCBlock .

    $end            reduce using rule 1 (program -> TkOBlock declarations TkSemicolon instructions TkCBlock .)


state 30

    (16) assignment -> TkId TkAsig . expression
    (24) expression -> . expression TkPlus expression
    (25) expression -> . expression TkMinus expression
    (26) expression -> . expression TkMult expression
    (27) expression -> . expression TkAnd expression
    (28) expression -> . expression TkOr expression
    (29) expression -> . expression TkLeq expression
    (30) expression -> . expression TkGeq expression
    (31) expression -> . expression TkLess expression
    (32) expression -> . expression TkGreater expression
    (33) expression -> . expression TkEqual expression
    (34) expression -> . expression TkNEqual expression
    (35) expression -> . expression TkComma expression
    (36) expression -> . expression TkApp TkId
    (37) expression -> . expression TkApp TkNum
    (38) expression -> . TkNot expression
    (39) expression -> . TkMinus expression
    (40) expression -> . TkOpenPar expression TkClosePar
    (41) expression -> . TkNum
    (42) expression -> . TkTrue
    (43) expression -> . TkFalse
    (44) expression -> . TkString
    (45) expression -> . TkId
    (46) expression -> . app
    (47) app -> . TkId accesslist

    TkNot           shift and go to state 35
    TkMinus         shift and go to state 32
    TkOpenPar       shift and go to state 36
    TkNum           shift and go to state 34
    TkTrue          shift and go to state 37
    TkFalse         shift and go to state 38
    TkString        shift and go to state 39
    TkId            shift and go to state 33

    expression                     shift and go to state 48
    app                            shift and go to state 40

state 31

    (19) while -> TkWhile expression . TkArrow instructions TkEnd
    (24) expression -> expression . TkPlus expression
    (25) expression -> expression . TkMinus expression
    (26) expression -> expression . TkMult expression
    (27) expression -> expression . TkAnd expression
    (28) expression -> expression . TkOr expression
    (29) expression -> expression . TkLeq expression
    (30) expression -> expression . TkGeq expression
    (31) expression -> expression . TkLess expression
    (32) expression -> expression . TkGreater expression
    (33) expression -> expression . TkEqual expression
    (34) expression -> expression . TkNEqual expression
    (35) expression -> expression . TkComma expression
    (36) expression -> expression . TkApp TkId
    (37) expression -> expression . TkApp TkNum

    TkArrow         shift and go to state 49
    TkPlus          shift and go to state 50
    TkMinus         shift and go to state 51
    TkMult          shift and go to state 52
    TkAnd           shift and go to state 53
    TkOr            shift and go to state 54
    TkLeq           shift and go to state 55
    TkGeq           shift and go to state 56
    TkLess          shift and go to state 57
    TkGreater       shift and go to state 58
    TkEqual         shift and go to state 59
    TkNEqual        shift and go to state 60
    TkComma         shift and go to state 61
    TkApp           shift and go to state 62


state 32

    (39) expression -> TkMinus . expression
    (24) expression -> . expression TkPlus expression
    (25) expression -> . expression TkMinus expression
    (26) expression -> . expression TkMult expression
    (27) expression -> . expression TkAnd expression
    (28) expression -> . expression TkOr expression
    (29) expression -> . expression TkLeq expression
    (30) expression -> . expression TkGeq expression
    (31) expression -> . expression TkLess expression
    (32) expression -> . expression TkGreater expression
    (33) expression -> . expression TkEqual expression
    (34) expression -> . expression TkNEqual expression
    (35) expression -> . expression TkComma expression
    (36) expression -> . expression TkApp TkId
    (37) expression -> . expression TkApp TkNum
    (38) expression -> . TkNot expression
    (39) expression -> . TkMinus expression
    (40) expression -> . TkOpenPar expression TkClosePar
    (41) expression -> . TkNum
    (42) expression -> . TkTrue
    (43) expression -> . TkFalse
    (44) expression -> . TkString
    (45) expression -> . TkId
    (46) expression -> . app
    (47) app -> . TkId accesslist

    TkNot           shift and go to state 35
    TkMinus         shift and go to state 32
    TkOpenPar       shift and go to state 36
    TkNum           shift and go to state 34
    TkTrue          shift and go to state 37
    TkFalse         shift and go to state 38
    TkString        shift and go to state 39
    TkId            shift and go to state 33

    expression                     shift and go to state 63
    app                            shift and go to state 40

state 33

    (45) expression -> TkId .
    (47) app -> TkId . accesslist
    (48) accesslist -> . access accesslist
    (49) accesslist -> . empty
    (50) access -> . TkOpenPar index TkClosePar
    (52) empty -> .

  ! reduce/reduce conflict for TkArrow resolved using rule 45 (expression -> TkId .)
  ! reduce/reduce conflict for TkPlus resolved using rule 45 (expression -> TkId .)
  ! reduce/reduce conflict for TkMinus resolved using rule 45 (expression -> TkId .)
  ! reduce/reduce conflict for TkMult resolved using rule 45 (expression -> TkId .)
  ! reduce/reduce conflict for TkAnd resolved using rule 45 (expression -> TkId .)
  ! reduce/reduce conflict for TkOr resolved using rule 45 (expression -> TkId .)
  ! reduce/reduce conflict for TkLeq resolved using rule 45 (expression -> TkId .)
  ! reduce/reduce conflict for TkGeq resolved using rule 45 (expression -> TkId .)
  ! reduce/reduce conflict for TkLess resolved using rule 45 (expression -> TkId .)
  ! reduce/reduce conflict for TkGreater resolved using rule 45 (expression -> TkId .)
  ! reduce/reduce conflict for TkEqual resolved using rule 45 (expression -> TkId .)
  ! reduce/reduce conflict for TkNEqual resolved using rule 45 (expression -> TkId .)
  ! reduce/reduce conflict for TkComma resolved using rule 45 (expression -> TkId .)
  ! reduce/reduce conflict for TkApp resolved using rule 45 (expression -> TkId .)
  ! reduce/reduce conflict for TkCBlock resolved using rule 45 (expression -> TkId .)
  ! reduce/reduce conflict for TkSemicolon resolved using rule 45 (expression -> TkId .)
  ! reduce/reduce conflict for TkEnd resolved using rule 45 (expression -> TkId .)
  ! reduce/reduce conflict for TkGuard resolved using rule 45 (expression -> TkId .)
  ! reduce/reduce conflict for TkFi resolved using rule 45 (expression -> TkId .)
  ! reduce/reduce conflict for TkClosePar resolved using rule 45 (expression -> TkId .)
    TkArrow         reduce using rule 45 (expression -> TkId .)
    TkPlus          reduce using rule 45 (expression -> TkId .)
    TkMinus         reduce using rule 45 (expression -> TkId .)
    TkMult          reduce using rule 45 (expression -> TkId .)
    TkAnd           reduce using rule 45 (expression -> TkId .)
    TkOr            reduce using rule 45 (expression -> TkId .)
    TkLeq           reduce using rule 45 (expression -> TkId .)
    TkGeq           reduce using rule 45 (expression -> TkId .)
    TkLess          reduce using rule 45 (expression -> TkId .)
    TkGreater       reduce using rule 45 (expression -> TkId .)
    TkEqual         reduce using rule 45 (expression -> TkId .)
    TkNEqual        reduce using rule 45 (expression -> TkId .)
    TkComma         reduce using rule 45 (expression -> TkId .)
    TkApp           reduce using rule 45 (expression -> TkId .)
    TkCBlock        reduce using rule 45 (expression -> TkId .)
    TkSemicolon     reduce using rule 45 (expression -> TkId .)
    TkEnd           reduce using rule 45 (expression -> TkId .)
    TkGuard         reduce using rule 45 (expression -> TkId .)
    TkFi            reduce using rule 45 (expression -> TkId .)
    TkClosePar      reduce using rule 45 (expression -> TkId .)
    TkOpenPar       shift and go to state 67

  ! TkArrow         [ reduce using rule 52 (empty -> .) ]
  ! TkPlus          [ reduce using rule 52 (empty -> .) ]
  ! TkMinus         [ reduce using rule 52 (empty -> .) ]
  ! TkMult          [ reduce using rule 52 (empty -> .) ]
  ! TkAnd           [ reduce using rule 52 (empty -> .) ]
  ! TkOr            [ reduce using rule 52 (empty -> .) ]
  ! TkLeq           [ reduce using rule 52 (empty -> .) ]
  ! TkGeq           [ reduce using rule 52 (empty -> .) ]
  ! TkLess          [ reduce using rule 52 (empty -> .) ]
  ! TkGreater       [ reduce using rule 52 (empty -> .) ]
  ! TkEqual         [ reduce using rule 52 (empty -> .) ]
  ! TkNEqual        [ reduce using rule 52 (empty -> .) ]
  ! TkComma         [ reduce using rule 52 (empty -> .) ]
  ! TkApp           [ reduce using rule 52 (empty -> .) ]
  ! TkCBlock        [ reduce using rule 52 (empty -> .) ]
  ! TkSemicolon     [ reduce using rule 52 (empty -> .) ]
  ! TkEnd           [ reduce using rule 52 (empty -> .) ]
  ! TkGuard         [ reduce using rule 52 (empty -> .) ]
  ! TkFi            [ reduce using rule 52 (empty -> .) ]
  ! TkClosePar      [ reduce using rule 52 (empty -> .) ]

    accesslist                     shift and go to state 64
    access                         shift and go to state 65
    empty                          shift and go to state 66

state 34

    (41) expression -> TkNum .

    TkArrow         reduce using rule 41 (expression -> TkNum .)
    TkPlus          reduce using rule 41 (expression -> TkNum .)
    TkMinus         reduce using rule 41 (expression -> TkNum .)
    TkMult          reduce using rule 41 (expression -> TkNum .)
    TkAnd           reduce using rule 41 (expression -> TkNum .)
    TkOr            reduce using rule 41 (expression -> TkNum .)
    TkLeq           reduce using rule 41 (expression -> TkNum .)
    TkGeq           reduce using rule 41 (expression -> TkNum .)
    TkLess          reduce using rule 41 (expression -> TkNum .)
    TkGreater       reduce using rule 41 (expression -> TkNum .)
    TkEqual         reduce using rule 41 (expression -> TkNum .)
    TkNEqual        reduce using rule 41 (expression -> TkNum .)
    TkComma         reduce using rule 41 (expression -> TkNum .)
    TkApp           reduce using rule 41 (expression -> TkNum .)
    TkCBlock        reduce using rule 41 (expression -> TkNum .)
    TkSemicolon     reduce using rule 41 (expression -> TkNum .)
    TkEnd           reduce using rule 41 (expression -> TkNum .)
    TkGuard         reduce using rule 41 (expression -> TkNum .)
    TkFi            reduce using rule 41 (expression -> TkNum .)
    TkClosePar      reduce using rule 41 (expression -> TkNum .)


state 35

    (38) expression -> TkNot . expression
    (24) expression -> . expression TkPlus expression
    (25) expression -> . expression TkMinus expression
    (26) expression -> . expression TkMult expression
    (27) expression -> . expression TkAnd expression
    (28) expression -> . expression TkOr expression
    (29) expression -> . expression TkLeq expression
    (30) expression -> . expression TkGeq expression
    (31) expression -> . expression TkLess expression
    (32) expression -> . expression TkGreater expression
    (33) expression -> . expression TkEqual expression
    (34) expression -> . expression TkNEqual expression
    (35) expression -> . expression TkComma expression
    (36) expression -> . expression TkApp TkId
    (37) expression -> . expression TkApp TkNum
    (38) expression -> . TkNot expression
    (39) expression -> . TkMinus expression
    (40) expression -> . TkOpenPar expression TkClosePar
    (41) expression -> . TkNum
    (42) expression -> . TkTrue
    (43) expression -> . TkFalse
    (44) expression -> . TkString
    (45) expression -> . TkId
    (46) expression -> . app
    (47) app -> . TkId accesslist

    TkNot           shift and go to state 35
    TkMinus         shift and go to state 32
    TkOpenPar       shift and go to state 36
    TkNum           shift and go to state 34
    TkTrue          shift and go to state 37
    TkFalse         shift and go to state 38
    TkString        shift and go to state 39
    TkId            shift and go to state 33

    expression                     shift and go to state 68
    app                            shift and go to state 40

state 36

    (40) expression -> TkOpenPar . expression TkClosePar
    (24) expression -> . expression TkPlus expression
    (25) expression -> . expression TkMinus expression
    (26) expression -> . expression TkMult expression
    (27) expression -> . expression TkAnd expression
    (28) expression -> . expression TkOr expression
    (29) expression -> . expression TkLeq expression
    (30) expression -> . expression TkGeq expression
    (31) expression -> . expression TkLess expression
    (32) expression -> . expression TkGreater expression
    (33) expression -> . expression TkEqual expression
    (34) expression -> . expression TkNEqual expression
    (35) expression -> . expression TkComma expression
    (36) expression -> . expression TkApp TkId
    (37) expression -> . expression TkApp TkNum
    (38) expression -> . TkNot expression
    (39) expression -> . TkMinus expression
    (40) expression -> . TkOpenPar expression TkClosePar
    (41) expression -> . TkNum
    (42) expression -> . TkTrue
    (43) expression -> . TkFalse
    (44) expression -> . TkString
    (45) expression -> . TkId
    (46) expression -> . app
    (47) app -> . TkId accesslist

    TkNot           shift and go to state 35
    TkMinus         shift and go to state 32
    TkOpenPar       shift and go to state 36
    TkNum           shift and go to state 34
    TkTrue          shift and go to state 37
    TkFalse         shift and go to state 38
    TkString        shift and go to state 39
    TkId            shift and go to state 33

    expression                     shift and go to state 69
    app                            shift and go to state 40

state 37

    (42) expression -> TkTrue .

    TkArrow         reduce using rule 42 (expression -> TkTrue .)
    TkPlus          reduce using rule 42 (expression -> TkTrue .)
    TkMinus         reduce using rule 42 (expression -> TkTrue .)
    TkMult          reduce using rule 42 (expression -> TkTrue .)
    TkAnd           reduce using rule 42 (expression -> TkTrue .)
    TkOr            reduce using rule 42 (expression -> TkTrue .)
    TkLeq           reduce using rule 42 (expression -> TkTrue .)
    TkGeq           reduce using rule 42 (expression -> TkTrue .)
    TkLess          reduce using rule 42 (expression -> TkTrue .)
    TkGreater       reduce using rule 42 (expression -> TkTrue .)
    TkEqual         reduce using rule 42 (expression -> TkTrue .)
    TkNEqual        reduce using rule 42 (expression -> TkTrue .)
    TkComma         reduce using rule 42 (expression -> TkTrue .)
    TkApp           reduce using rule 42 (expression -> TkTrue .)
    TkCBlock        reduce using rule 42 (expression -> TkTrue .)
    TkSemicolon     reduce using rule 42 (expression -> TkTrue .)
    TkEnd           reduce using rule 42 (expression -> TkTrue .)
    TkGuard         reduce using rule 42 (expression -> TkTrue .)
    TkFi            reduce using rule 42 (expression -> TkTrue .)
    TkClosePar      reduce using rule 42 (expression -> TkTrue .)


state 38

    (43) expression -> TkFalse .

    TkArrow         reduce using rule 43 (expression -> TkFalse .)
    TkPlus          reduce using rule 43 (expression -> TkFalse .)
    TkMinus         reduce using rule 43 (expression -> TkFalse .)
    TkMult          reduce using rule 43 (expression -> TkFalse .)
    TkAnd           reduce using rule 43 (expression -> TkFalse .)
    TkOr            reduce using rule 43 (expression -> TkFalse .)
    TkLeq           reduce using rule 43 (expression -> TkFalse .)
    TkGeq           reduce using rule 43 (expression -> TkFalse .)
    TkLess          reduce using rule 43 (expression -> TkFalse .)
    TkGreater       reduce using rule 43 (expression -> TkFalse .)
    TkEqual         reduce using rule 43 (expression -> TkFalse .)
    TkNEqual        reduce using rule 43 (expression -> TkFalse .)
    TkComma         reduce using rule 43 (expression -> TkFalse .)
    TkApp           reduce using rule 43 (expression -> TkFalse .)
    TkCBlock        reduce using rule 43 (expression -> TkFalse .)
    TkSemicolon     reduce using rule 43 (expression -> TkFalse .)
    TkEnd           reduce using rule 43 (expression -> TkFalse .)
    TkGuard         reduce using rule 43 (expression -> TkFalse .)
    TkFi            reduce using rule 43 (expression -> TkFalse .)
    TkClosePar      reduce using rule 43 (expression -> TkFalse .)


state 39

    (44) expression -> TkString .

    TkArrow         reduce using rule 44 (expression -> TkString .)
    TkPlus          reduce using rule 44 (expression -> TkString .)
    TkMinus         reduce using rule 44 (expression -> TkString .)
    TkMult          reduce using rule 44 (expression -> TkString .)
    TkAnd           reduce using rule 44 (expression -> TkString .)
    TkOr            reduce using rule 44 (expression -> TkString .)
    TkLeq           reduce using rule 44 (expression -> TkString .)
    TkGeq           reduce using rule 44 (expression -> TkString .)
    TkLess          reduce using rule 44 (expression -> TkString .)
    TkGreater       reduce using rule 44 (expression -> TkString .)
    TkEqual         reduce using rule 44 (expression -> TkString .)
    TkNEqual        reduce using rule 44 (expression -> TkString .)
    TkComma         reduce using rule 44 (expression -> TkString .)
    TkApp           reduce using rule 44 (expression -> TkString .)
    TkCBlock        reduce using rule 44 (expression -> TkString .)
    TkSemicolon     reduce using rule 44 (expression -> TkString .)
    TkEnd           reduce using rule 44 (expression -> TkString .)
    TkGuard         reduce using rule 44 (expression -> TkString .)
    TkFi            reduce using rule 44 (expression -> TkString .)
    TkClosePar      reduce using rule 44 (expression -> TkString .)


state 40

    (46) expression -> app .

    TkArrow         reduce using rule 46 (expression -> app .)
    TkPlus          reduce using rule 46 (expression -> app .)
    TkMinus         reduce using rule 46 (expression -> app .)
    TkMult          reduce using rule 46 (expression -> app .)
    TkAnd           reduce using rule 46 (expression -> app .)
    TkOr            reduce using rule 46 (expression -> app .)
    TkLeq           reduce using rule 46 (expression -> app .)
    TkGeq           reduce using rule 46 (expression -> app .)
    TkLess          reduce using rule 46 (expression -> app .)
    TkGreater       reduce using rule 46 (expression -> app .)
    TkEqual         reduce using rule 46 (expression -> app .)
    TkNEqual        reduce using rule 46 (expression -> app .)
    TkComma         reduce using rule 46 (expression -> app .)
    TkApp           reduce using rule 46 (expression -> app .)
    TkCBlock        reduce using rule 46 (expression -> app .)
    TkSemicolon     reduce using rule 46 (expression -> app .)
    TkEnd           reduce using rule 46 (expression -> app .)
    TkGuard         reduce using rule 46 (expression -> app .)
    TkFi            reduce using rule 46 (expression -> app .)
    TkClosePar      reduce using rule 46 (expression -> app .)


state 41
